# 3DGameIdea

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  index.html  mcp-tools-preview.html  vcpkg.json
.cursor/: mcp.json
.cursor/rules/: blog-writing-voice.mdc  epic-ticket-population.mdc  grass-foliage-on-grass-terrain.mdc  ids-from-display-names.mdc  lookup-fields-dropdowns.mdc  rebuild-after-code-changes.mdc  reset-editor-after-edits.mdc  transcript-canon-alignment.mdc
.github/workflows/: deploy-blog.yml
assets/: index-Chal7k2g.js  index-DQE8Pjbs.css
assets/editor/fonts/: LICENSE-Font-Awesome.txt
assets/ui/fonts/: CARTOGRAPHY_FONTS.md  README.md
assets/world-forge/placeholders/: PROVENANCE.md
blog/: .env.example  .env.production  README.md  index.html  package-lock.json  package.json  vite.config.ts
blog/content/: about.md
blog/content/posts/: how-this-blog-will-work.md  i-gave-the-ai-tools-into-my-editor.md  (+1 more)
blog/public/: mcp-tools-preview.html
blog/src/: App.tsx  vite-env.d.ts
context/: README.md  roadmap.md
context/architecture/: components.md  content-vs-engine-workflows.md  overview.md
context/art/: blockbench-asset-list.md  cartography-design.md  character-direction.md  theme-palette.md  visual-direction.md
context/benchmarks/: milestone2.md
context/decisions/: index.md
context/design/: README.md  dom-answered-questions.md  dom-open-questions.md  rpg-engine-ui.pen
context/features/: animator.md  audio.md  authoring-git-sync.md  character-controller.md  collision-debug.md  combat-volumes.md  debug-world.md  editor-mvp.md  hud-toolkit.md  index.md  interaction-volumes.md  lua-scripting.md  map-design-language.md  mcp-live-editor.md  navigation-grid.md  open-world-navigation.md  orbit-camera.md  runtime-diagnostics.md  streaming-lod-budgets.md  terrain-authoring.md  ui-canvas.md  water-hydrology.md  world-forge-scope.md
context/formats/: animation-clip-assets.md  animator-controller-assets.md  camera-assets.md  character-assets.md  foliage-density.md  foliage-layers.md  hud-assets.md  materials.md  mesh-assets.md  prefab-assets.md  project-git-sync.md  rig-assets.md  script-assets.md  terrain-edits.md  terrain-paint.json.md  ui-canvas-assets.md  water-surfaces.md  world-forge-acts.md  world-forge-archetypes.md  world-forge-dialogues.md  world-forge-factions.md  world-forge-map.md  world-forge-mcp.md  world-forge-pantheon.md  world-forge-quests.md  world-forge-relationships.md  world-forge-resources.md  world-placement.md
context/interviews/: open-questions.md
context/planning/: epic-template.md  epics.md  notion-sync.md  ticket-template.md
context/resources/: index.md
context/story/: campaign-beat-sheet.md  character-creation.md  companions.md  continuity-checklist.md  factions.md  frangitur-the-great-evil.md  index.md  nefarium-and-the-shroud.md  official-world-map.md  prologue-and-opening.md  side-quest-catalog.md  story-vision.md  the-squire.md
context/testing/: coverage.md  findings.md  strategy.md
samples/open-world-rpg/: play.session.json  project.engine.json
skills/desktop-qa/: SKILL.md
skills/engine-ticket-workflow/: SKILL.md
skills/evaluate/: SKILL.md
skills/grill-me/: SKILL.md
skills/interview-engine-decisions/: SKILL.md
skills/signal-to-noise-optimizer/: SKILL.md
skills/teach/: SKILL.md
skills/write-engine-ticket/: SKILL.md
src/animation/: animation_preview.cpp  animator_runtime.cpp
src/app/: main.cpp
src/assets/: animation_clip_asset.cpp  animator_controller_asset.cpp  asset_registry.cpp  camera_asset.cpp  character_asset.cpp  hud_asset.cpp  material_asset.cpp  mesh_asset.cpp  play_session_settings.cpp  png_decode.cpp  prefab_asset.cpp  rig_asset.cpp  script_bindings_asset.cpp  ui_canvas_asset.cpp  ui_canvas_mutate.cpp  world_forge_archetypes_asset.cpp  world_forge_dialogues_asset.cpp  world_forge_factions_asset.cpp  world_forge_map_asset.cpp  world_forge_pantheon_asset.cpp  world_forge_quests_asset.cpp  world_forge_relationships_asset.cpp  world_forge_resources_asset.cpp
src/audio/: audio_engine.cpp
src/automation/: automation_trace.cpp  command.cpp  editor_bridge.cpp  editor_screenshot.cpp  editor_session.cpp  live_automation_control.cpp  mcp_server.cpp  project_git_commands.cpp  scene_commands.cpp  terrain_edit_commands.cpp  water_edit_commands.cpp  water_session.cpp  world_forge_commands.cpp
src/core/: error.cpp  id_slug.cpp
src/diagnostics/: crash_bundle.cpp  gpu_diagnostics.cpp  logger.cpp
src/dialogue/: dialogue_graph_edit.cpp  dialogue_runtime.cpp  twee_import.cpp
src/physics/: character_controller.cpp  collision_world.cpp  rigidbody_locomotion.cpp
src/quest/: quest_runtime.cpp
src/rendering/: debug_camera.cpp  editor_fonts.cpp  orbit_camera.cpp  render_app.cpp  viewport_picking.cpp
src/scripting/: lua_runtime.cpp  script_file_monitor.cpp
src/standing/: standing_runtime.cpp
src/ui/: cartography_strokes.cpp  editor_chrome.cpp  editor_ui_hotspots.cpp  game_fonts.cpp  hud_runtime.cpp  imgui_png_texture.cpp  ui_canvas_editor.cpp  ui_canvas_stack.cpp  world_forge_editor.cpp  world_forge_graph_camera.cpp
src/world/: authored_components.cpp  cell_state.cpp  cell_streamer.cpp  combat_volumes.cpp  entity_id.cpp  foliage_density.cpp  foliage_field.cpp  foliage_layers.cpp  foliage_scatter.cpp  interaction_volumes.cpp  navigation_grid.cpp  prefab_collision.cpp  scene.cpp  terrain.cpp  terrain_edits.cpp  terrain_field.cpp  terrain_paint.cpp  transform_utils.cpp  water_field.cpp  water_store.cpp  world_influence.cpp  world_partition.cpp
tests/: foundation_tests.cpp  suite_tests.cpp
tools/: bake_dead_log_gltf.py  bake_player_gltf.py  bake_stones_gltf.py  bake_stump_gltf.py  bake_tree_bbmodel.py  build_world_map_layers.py  build_world_map_tiles.py  generate_cartography_icons.py  generate_cartography_panels.py  generate_cartography_strokes.py  generate_oak_variants.py  install_cartography_icons.py  mcp-server.cmd  twee_to_world_forge_dialogues.py
tools/blender-mcp/: lowpoly_adventurer_tpose.blend  lowpoly_adventurer_tpose.blend1  squire_rodin.blend  squire_rodin.blend1
(+357 files in other folders)
